Added post modification

--- a/Blog/Views/About/Index.cshtml
+++ b/Blog/Views/About/Index.cshtml
@@ -3,15 +3,8 @@
     ViewData["Title"] = "About";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div id="app">
+<div>
     <h2>About</h2>
-    <p id="descritpion"></p>
-    <p id="mail_address"></p>
+    <p>@Model.AuthorName</p>
+    <p>@Model.MailAddress</p>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-<script>
-    $.getJSON('about/getinfo', function (data) {
-        document.getElementById('descritpion').innerText = data.Description;
-        document.getElementById('mail_address').innerText = data.MailAddress;
-    });
-</script>
