--- a/Blog/Views/Account/Login.cshtml
+++ b/Blog/Views/Account/Login.cshtml
@@ -4,16 +4,11 @@
 <form asp-for="login" method="post">
     <h4>Use a local account to log in.</h4>
     <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
     <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
+        <input asp-for="@Model.Email" class="form-control" />
     </div>
     <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
+        <input asp-for="@Model.Password" class="form-control" />
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-default">Log in</button>
