view models namespace fix

--- a/Blog/Views/AdminPanel/Index.cshtml
+++ b/Blog/Views/AdminPanel/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = null;
 }
-@model Blog.Models.AdminPanelViewModel
+@model Blog.Models.ViewModels.AdminPanelViewModel
 
 <!DOCTYPE html>
 
