Added user management

--- a/Blog/Views/AdminPanel/Index.cshtml
+++ b/Blog/Views/AdminPanel/Index.cshtml
@@ -37,6 +37,7 @@
             </tr>
         }
     </table>
+    <a asp-action="UserManager">Manage Users</a>
     @await  Html.PartialAsync("RemoveTagsPartial", Model.Tags)
 </body>
 </html>
