--- a/Blog/Views/Account/Login.cshtml
+++ b/Blog/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Blog.Models.ViewModels.LoginViewModel
+﻿@model Blog.Models.ViewModels.AccountViewModel
 @inject SignInManager<Blog.Models.ApplicationUser> SignInManager
 
 <form asp-for="login" method="post">
