--- a/Blog/Views/Home/Read.cshtml
+++ b/Blog/Views/Home/Read.cshtml
@@ -7,8 +7,7 @@
     <main>
         <h1>@Model.Post.Title</h1>
         <p id="date">Published: </p>
-        <button v-on:click="scrollTo('#comments_block')" class="button main_navigation">Go to comments</button>
-        <article class="post" id="scrollable">
+        <article class="post">
             <markdown content="@Model.Post.Content"></markdown>
         </article>
     </main>
@@ -27,7 +26,6 @@
         </ul>
     </form>
     <div id="comments_block">
-        <button v-on:click="scrollTo('#app')" class="button main_navigation">Scroll to top.</button>
         @foreach (Blog.Models.Comment c in Model.Post.Comments)
         {
             <div class="comment">
@@ -35,17 +33,12 @@
                 <p class="comment_content">@c.Content</p>
             </div>
         }
-        <button v-on:click="scrollTo('#comments_block')" class="button main_navigation">Top of the comments.</button>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 <script src="~/JavaScript/GetDate.js"></script>
-<script src="~/JavaScript/PageNavigator.js"></script>
 <script>
         document.getElementById("date").textContent += howLongAgo('@Model.Post.PublicationDate.ToUniversalTime().ToString("o")');
 </script>
-<script>
-    let vm = navigate("#app");
-</script>
+
 
 
