Added account delete functionality, split UserManager into diffrent controller

--- a/Blog/Views/AdminPanel/Index.cshtml
+++ b/Blog/Views/AdminPanel/Index.cshtml
@@ -34,10 +34,10 @@
                 <td><a asp-action="Modify" asp-route-id="@post.Id">Modify</a></td>
                 <td><a asp-controller="AdminPanel" asp-action="DeletePost" asp-route-id="@post.Id">Delete</a></td>
                 <td><a asp-action="CommentManager" asp-route-id="@post.Id">Manage Comments</a></td>
-            </tr>
+</tr>
         }
     </table>
-    <a asp-action="UserManager">Manage Users</a>
+    <a asp-controller="UserManager" asp-action="Index">Manage Users</a>
     @await  Html.PartialAsync("RemoveTagsPartial", Model.Tags)
 </body>
 </html>
