--- a/Blog/Views/UserManager/AddAccountPartial.cshtml
+++ b/Blog/Views/UserManager/AddAccountPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Blog.Models.ViewModels.AccountViewModel
-<form asp-action="AddUser" method="post">
+<form asp-action="Add" method="post">
     <label>Email</label>
     <input asp-for="Email" />
     <label>Password</label>
