admin account creation functionality

--- a/Blog/Views/Account/Login.cshtml
+++ b/Blog/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Blog.Models.ViewModels.AccountViewModel
+﻿@model Blog.Models.ViewModels.AccountLoginViewModel
 @inject SignInManager<Blog.Models.ApplicationUser> SignInManager
 
 <form asp-for="login" method="post">
