--- a/Blog/Views/UserManager/AddAccountPartial.cshtml
+++ b/Blog/Views/UserManager/AddAccountPartial.cshtml
@@ -4,6 +4,8 @@
     <input asp-for="LoginData.Email" />
     <label>Password</label>
     <input asp-for="LoginData.Password" />
+    <label>Name</label>
+    <input asp-for="AuthorName" />
     <label>Admin account</label>
     <input asp-for="IsAdmin" type="checkbox" />
     <input type="submit" value="Add user" />
