--- a/Blog/Views/Home/PostsPartial.cshtml
+++ b/Blog/Views/Home/PostsPartial.cshtml
@@ -8,6 +8,7 @@
         <div class="post_preview">
             <h2><a asp-controller="Home" asp-action="Read" asp-route-id="@post.Id" class="blog_navigation">@post.Title</a></h2>
             <p class="post_pub_date">@post.PublicationDate.ToUniversalTime().ToString("o")</p>
+            <a>@post.AuthorName</a>
             <p class="tag">
                 @foreach (Blog.Models.PostTag postTag in post.PostTags)
                 {
