--- a/Blog/Views/Home/Read.cshtml
+++ b/Blog/Views/Home/Read.cshtml
@@ -7,6 +7,7 @@
     <main>
         <h1>@Model.Post.Title</h1>
         <p id="date">Published: </p>
+        <p>By: @Model.Post.AuthorName</p>
         <article class="post">
             <markdown content="@Model.Post.Content"></markdown>
         </article>
