--- a/Blog/Views/WriterPanel/Add.cshtml
+++ b/Blog/Views/WriterPanel/Add.cshtml
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    <form asp-action="Add" asp-controller="AdminPanel" id="app">
+    <form asp-action="Add" id="app">
         <input asp-for="Post.Title"  />
         <textarea id="input" asp-for="Post.Content"></textarea>
         <input asp-for="TagNames" />
