--- a/Blog/Views/Archive/Index.cshtml
+++ b/Blog/Views/Archive/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@model ICollection<Blog.Models.Tag>
 @{
     Layout = "_Layout";
+    ViewData["Title"] = "Archive";
 }
 <div id="app">
     <div id="tag_list">
