--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -1,19 +1,20 @@
 ﻿<!DOCTYPE html>
-
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="@ViewData["Description"]" />
+    <meta name="author" content="@ViewData["Author"]" />
     <link type="text/css" rel="stylesheet" href="~/css/main.css" />
     <title>@ViewData["Title"] - @ViewData["BlogName"]</title>
 </head>
 <body>
     <div id="side_bar">
         <div>
-            <a asp-controller="Home" asp-action="Index" ><img src="~/logo.png" alt="logo" id="logo"/></a>
-            <h1><a asp-controller="Home" asp-action="Index" id="blog_title" class="blog_navigation side_bar_element">@ViewData["BlogName"]</a></h1>
+            <a asp-controller="Home" asp-action="Index" ><img src="~/logo.png" alt="logo" class="logo"/></a>
+            <h1><a asp-controller="Home" asp-action="Index" class="blog_title blog_navigation">@ViewData["BlogName"]</a></h1>
         </div>
-        <div id="description">
+        <div class="description">
             <p>@ViewData["Description"]</p>
         </div>
         <ul class="menu">
