--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="description" content="@ViewData["Description"]" />
     <meta name="author" content="@ViewData["Author"]" />
     <link type="text/css" rel="stylesheet" href="~/css/main.css" />
+    <link type="image/png" rel="icon" href="~/icon.ico" />
     <title>@ViewData["Title"] - @ViewData["BlogName"]</title>
 </head>
 <body>
