--- a/Blog/Views/Error/UnhandledException.cshtml
+++ b/Blog/Views/Error/UnhandledException.cshtml
@@ -4,7 +4,7 @@
     Layout = "_Layout";
     ViewData["Title"] = "Error";
 }
-<main class="error_info">
+<main>
     @if( Model.Code != null)
     {
         <p>@Model.Code</p>
