--- a/Blog/Views/Archive/Index.cshtml
+++ b/Blog/Views/Archive/Index.cshtml
@@ -3,31 +3,26 @@
     Layout = "_Layout";
     ViewData["Title"] = "Archive";
 }
-<div id="app">
-    <div id="tag_list">
+<div>
+    <div>
         <h2>Featured tags:</h2>
         <span>
             @foreach (var tag in Model)
             {
-                <button class="button" v-on:click="scrollTo('@($"#{tag.Name}_destination")')">@tag.Name</button>
+                <button>@tag.Name</button>
             }
         </span>
     </div>
     @foreach (var tag in Model)
     {
-        <div class="sorted_posts_list">
-            <p class="tag" id="@($"{tag.Name}_destination")"><b><i>@tag.Name</i></b></p>
-            <ul class="posts_list">
+        <div>
+            <p><b><i>@tag.Name</i></b></p>
+            <ul>
                 @foreach (var post in tag.PostTags)
                 {
-                    <li><a asp-controller="Home" asp-action="Read" asp-route-id="@post.PostId" class="blog_navigation">@post.Post.Title</a></li>
+                    <li><a asp-controller="Home" asp-action="Read" asp-route-id="@post.PostId">@post.Post.Title</a></li>
                 }
             </ul>
         </div>
     }
 </div>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-<script src="~/JavaScript/PageNavigator.js"></script>
-<script>
-    let pageNavigator = navigate("#app");
-</script>
