--- a/Blog/Views/Home/FindArticle.cshtml
+++ b/Blog/Views/Home/FindArticle.cshtml
@@ -7,6 +7,6 @@
 
 @foreach (var post in Model)
 {
-    <h2><a asp-controller="Home" asp-action="Read" asp-route-id="@post.Id" class="blog_navigation">@post.Title</a></h2>
+    <h2><a asp-controller="Home" asp-action="Read" asp-route-id="@post.Id">@post.Title</a></h2>
 }
 
