--- a/Blog/Views/Home/PageNavigationPartial.cshtml
+++ b/Blog/Views/Home/PageNavigationPartial.cshtml
@@ -3,6 +3,6 @@
 <nav>
     @for (int i = 0; i < Model; i++)
     {
-        <a asp-action="Pages" asp-route-page="@(i + 1)" class="page_number blog_navigation">@(i + 1)</a>
+        <a asp-action="Pages" asp-route-page="@(i + 1)">@(i + 1)</a>
     }
 </nav>
