--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -11,17 +11,20 @@
     <title>@ViewData["Title"] - @ViewData["BlogName"]</title>
 </head>
 <body>
-    <div class="menu_container">
-        <a class="logo" asp-controller="Home" asp-action="Index"><img src="~/logo.png" alt="logo" /></a>
-        <h1 class="blog_name"><a asp-controller="Home" asp-action="Index">@ViewData["BlogName"]</a></h1>
-        <p class="description">@ViewData["Description"]</p>
-        <ul class="navigation_menu">
-            <li><a asp-controller="Archive" asp-action="Index">Archive</a></li>
-            <li><a asp-controller="About" asp-action="Index">About</a></li>
-        </ul>
-    </div>
-    <div class="content_container">
-        @RenderBody()
+    <div id="flex_container">
+        <div class="menu_container main_flex_item">
+            <a class="logo" asp-controller="Home" asp-action="Index"><img src="~/logo.png" alt="logo" /></a>
+            <h1 class="blog_name"><a asp-controller="Home" asp-action="Index">@ViewData["BlogName"]</a></h1>
+            <p class="description">@ViewData["Description"]</p>
+            <ul class="navigation_menu">
+                <li><a asp-controller="Archive" asp-action="Index">Archive</a></li>
+                <li><a asp-controller="About" asp-action="Index">About</a></li>
+            </ul>
+        </div>
+        <div class="content_container main_flex_item">
+            @RenderBody()
+        </div>
+        <div class="right_margin main_flex_item"></div>
     </div>
 </body>
 </html>
